--- a/cobrapyconverter/GenomeScaleModels/args.yml
+++ b/cobrapyconverter/GenomeScaleModels/args.yml
@@ -1,11 +1,11 @@
 ---
-target: CPD-347
-precursor: 
+target: 3-HYDROXY-PROPIONATE
 max_path_len: 2
+precursor: 
 bigg_model: iML1515
 carbon_fixation: false
-nad_or_nadp: nad_c
-nadh_or_nadph: nadh_c
+nad_or_nadp: nadp_c
+nadh_or_nadph: nadph_c
 Acceptor: fad_c
 donor_h2: fadh2_c
 ETR-Quinones: q8_c
